--- a/reestr/reestr.csproj
+++ b/reestr/reestr.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
+    <PackageReference Include="MudBlazor" Version="7.0.2" />
+  </ItemGroup>
+
 </Project>
